--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-/MatthewBub_OOPLab3/MatthewBub_OOPLab3.iml
+/MatthewBub_OOPLab3/MatthewBub_OOP_Lab3.iml
 /MatthewBub_OOPLab3/.idea
+/MatthewBub_OOPLab3/out
+/IOExampleJSON/.idea
+/IOExampleJSON/IOExampleJSON.iml
+/META-INF/MANIFEST.MF
+/IOExample/.idea
+/IOExample/IOExmaple.iml
