--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-/MatthewBub_OOPLab3/MatthewBub_OOP_Lab3.iml
-/MatthewBub_OOPLab3/.idea
-/MatthewBub_OOPLab3/out
+/MatthewBub_OOP_Lab3/MatthewBub_OOP_Lab3.iml
+/MatthewBub_OOP_Lab3/.idea
 /IOExampleJSON/.idea
 /IOExampleJSON/IOExampleJSON.iml
 /META-INF/MANIFEST.MF
